syntax = "proto3";
package neutron.revenue;

import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";


option go_package = "github.com/neutron-org/neutron/v5/x/revenue/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;

  string denom_compensation = 1;

  // in USD
  uint64 base_compensation = 2;

  string performance_threshold = 3 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];

  string allowed_missed = 4 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "cosmossdk.io/math.LegacyDec",
    (gogoproto.nullable) = false
  ];



//  // Defines amount of blocks required before query becomes available for
//  // removal by anybody
//  uint64 query_submit_timeout = 1;
//
//  // Amount of coins deposited for the query.
//  repeated cosmos.base.v1beta1.Coin query_deposit = 2 [
//    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
//    (gogoproto.nullable) = false
//  ];
//
//  // Amount of tx hashes to be removed during a single EndBlock. Can vary to
//  // balance between network cleaning speed and EndBlock duration. A zero value
//  // means no limit.
//  uint64 tx_query_removal_limit = 3;
//
//  // Maximum amount of keys in a registered key value query
//  uint64 max_kv_query_keys_count = 4;
//
//  // max_transactions_filters defines maximum allowed amount of tx filters in msgRegisterInterchainQuery
//  uint64 max_transactions_filters = 5;
}
